@@ -1,4 +1,4 @@
-// Copyright 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2016 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2016, 2017 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.commands.event;
 
 import java.util.*;
@@ -23,7 +23,7 @@ import org.deltava.util.system.SystemData;
 /**
  * A Web Site Command to save Online Events.
  * @author Luke
- * @version 7.0
+ * @version 8.0
  * @since 1.0
  */
 
@@ -138,7 +138,7 @@ public class EventSaveCommand extends AbstractCommand {
 			if (selectedCharts != null) {
 				Collection<Integer> chartIDs = new HashSet<Integer>();
 				for (Iterator<String> i = selectedCharts.iterator(); i.hasNext(); )
-					chartIDs.add(new Integer(StringUtils.parseHex(i.next())));
+					chartIDs.add(Integer.valueOf(StringUtils.parseHex(i.next())));
 
 				// Load the charts
 				e.getCharts().clear();
